[tool.poetry]
name = "dasf-seismic"
version = "1.0.beta.7"
description = "DASF module for Seismic Computation"
authors = ["Julio Faracco <jcfaracco@gmail.com>"]
maintainers = ["Julio Faracco <jcfaracco@gmail.com>"]
license = "MIT"
homepage = "https://github.com/discovery-unicamp/dasf-seismic"
repository = "https://github.com/discovery-unicamp/dasf-seismic"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
]
readme="README.md"
exclude = ["tests/*", "docs/*"]
packages = [
    {include = "dasf_seismic"}
]

[tool.poetry.dependencies]
dasf = { git = "https://github.com/discovery-unicamp/dasf-core.git", branch = "main" }
glcm-cupy = { git = "https://github.com/SerodioJ/glcm-cupy.git", branch = "stable" }
multidimio = "0.8.0"
python = ">=3.10"
scikit-image = "0.25.2"

[tool.poetry.dev-dependencies]
flake8 = "*"
mock = "*"
parameterized = "*"
paramiko = "*"
pytest = "*"
pytest-cov = "*"
pytest-benchmark = "*"
wheel = "*"

[tool.isort]
profile = "black"

[tool.coverage.paths]
source = ["dasf_seismic", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["dasf_seismic"]

[build-system]
requires = ["poetry-core>=1.1.10"]
build-backend = "poetry.core.masonry.api"
